ugas genitori: fixed phone icon and alignment

--- a/ungiorno-mobile/ungiorno-mobile-genitori/www/css/style.css
+++ b/ungiorno-mobile/ungiorno-mobile-genitori/www/css/style.css
@@ -104,7 +104,7 @@ a.item-content {
     margin: 0px 10px 0px 10px!important;
 }
 .button-norm img {
-    top: 20px!important;
+    top: 10px!important;
     left: 20px!important;
 }
 .button-norm:hover {
